--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <p>Ufærdig landing page med links til statiske undersider</p>
       <section>
         <ul>
-          <li><a href="kategori.html"></a></li>
-          <li><a href="produktliste.html"></a></li>
-          <li><a href="produkt.html"></a></li>
+          <li><a href="kategori.html">Kategorier</a></li>
+          <li><a href="produktliste.html">Produktliste</a></li>
+          <li><a href="produkt.html">Produkter</a></li>
         </ul>
       </section>
     </main>
