--- a/produkt.html
+++ b/produkt.html
@@ -19,6 +19,12 @@
       </nav>
     </header>
     <main class="produkt">
+      <ol class="breadcrumbs">
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="kategori.html">Kategorier</a></li>
+        <li><a href="produktliste.html">Nike</a></li>
+        <li>Sahara Team India Fanwear Round Neck Jersey</li>
+      </ol>
       <img
         src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
         alt="Blue T20 Indian Cricket Jersey"
