--- a/produktliste.html
+++ b/produktliste.html
@@ -20,49 +20,55 @@
     </header>
     <main>
       <h2>Tøj</h2>
-
-      <section class="produktliste">
+      <template id="produktListeTemplate">
+        <section class="produktliste">
+          <article>
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Sahara Team India Fanwear"
+            />
+            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="subtle">Tshirts | Nike</p>
+            <p class="price">DKK 1595,-</p>
+            <a href="produkt.html">Læs mere</a>
+          </article>
+          <!-- <article class="onSale">
+          <img
+          src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+          alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p class="subtle">Tshirts | Nike</p>
+          <p class="price">Før: DKK 1595,-</p>
+          <div class="discount">
+            <p>Nu: DKK 1399,-</p>
+          </div>
+          <a href="produkt.html">Læs mere</a>
+        </article>
+        <article class="soldOut">
+          <img
+          src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+          alt="Blue T20"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p class="subtle">Tshirts | Nike</p>
+          <p class="price">DKK 1595,-</p>
+          <p class="udsolgt">Udsolgt</p>
+          <a href="produkt.html">Læs mere</a>
+        </article>
         <article>
           <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear"
+          src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+          alt="Blue T20 Indian"
           />
           <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
           <p class="subtle">Tshirts | Nike</p>
           <p class="price">DKK 1595,-</p>
           <a href="produkt.html">Læs mere</a>
-        </article>
-        <article>
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p class="subtle">Tshirts | Nike</p>
-          <p class="price">DKK 1595,-</p>
-          <a href="produkt.html">Læs mere</a>
-        </article>
-        <article>
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p class="subtle">Tshirts | Nike</p>
-          <p class="price">DKK 1595,-</p>
-          <a href="produkt.html">Læs mere</a>
-        </article>
-        <article>
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p class="subtle">Tshirts | Nike</p>
-          <p class="price">DKK 1595,-</p>
-          <a href="produkt.html">Læs mere</a>
-        </article>
-      </section>
+        </article> -->
+        </section>
+      </template>
     </main>
+    <script src="js/produktliste.js"></script>
   </body>
 </html>
