--- a/produktliste.html
+++ b/produktliste.html
@@ -19,20 +19,22 @@
       </nav>
     </header>
     <main>
-      <h2>Tøj</h2>
-      <template id="produktListeTemplate">
-        <section class="produktliste">
-          <article>
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-              alt="Sahara Team India Fanwear"
-            />
-            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p class="subtle">Tshirts | Nike</p>
-            <p class="price">DKK 1595,-</p>
-            <a href="produkt.html">Læs mere</a>
-          </article>
-          <!-- <article class="onSale">
+      <h2>Produkter</h2>
+    </main>
+    <template id="product_list">
+      <!--   <section class="produktliste"> -->
+      <article>
+        <img
+          src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+          alt="Sahara Team India Fanwear"
+        />
+        <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
+        <p class="subtle"><!-- Tshirts | Nike --></p>
+        <p class="price">DKK 1595,-</p>
+        <a href="produkt.html">Læs mere</a>
+      </article>
+    </template>
+    <!-- <article class="onSale">
           <img
           src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
           alt="Blue T20 Indian Cricket Jersey"
@@ -66,9 +68,7 @@
           <p class="price">DKK 1595,-</p>
           <a href="produkt.html">Læs mere</a>
         </article> -->
-        </section>
-      </template>
-    </main>
+    <!--      </section> -->
     <script src="js/produktliste.js"></script>
   </body>
 </html>
