--- a/produktliste.html
+++ b/produktliste.html
@@ -29,7 +29,7 @@
           alt="Sahara Team India Fanwear"
         />
         <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
-        <p class="subtle"><!-- Tshirts | Nike --></p>
+        <h4 class="subtle"><!-- Tshirts | Nike --></h4>
         <p class="price">DKK 1595,-</p>
         <a href="produkt.html">Læs mere</a>
       </article>
