--- a/produktliste.html
+++ b/produktliste.html
@@ -29,12 +29,9 @@
           alt="Sahara Team India Fanwear"
         />
         <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
-
-        <p class="subtle price"><!-- Tshirts | Nike --></p>
-
+        <h5></h5>
         <h4 class="subtle"><!-- Tshirts | Nike --></h4>
-        <p class="price">DKK 1595,-</p>
-
+        <p class="price"></p>
         <a href="produkt.html">Læs mere</a>
       </article>
     </template>
