--- a/produktliste.html
+++ b/produktliste.html
@@ -31,7 +31,7 @@
         <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
         <h4 class="subtle"><!-- Tshirts | Nike --></h4>
         <p class="price">DKK 1595,-</p>
-        <a href="produkt.html">Læs mere</a>
+        <a href="">Læs mere</a>
       </article>
     </template>
     <!-- <article class="onSale">
