links og redigeringer

--- a/produkt.html
+++ b/produkt.html
@@ -25,12 +25,9 @@
         <li><a href="produktliste.html">Nike</a></li>
         <li>Sahara Team India Fanwear Round Neck Jersey</li>
       </ol>
-      <img
-        src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-        alt="Blue T20 Indian Cricket Jersey"
-      />
+      <img src="" alt="" />
       <section class="indholdprodukt">
-        <section class="buy">
+        <section class="purchaseBox">
           <h3>Brown Knitted Cardigan</h3>
           <p>Nike | Cardigan</p>
           <form>
@@ -62,5 +59,6 @@
         </section>
       </section>
     </main>
+    <script src="js/produkt.js"></script>
   </body>
 </html>
