--- a/produktliste.html
+++ b/produktliste.html
@@ -24,10 +24,7 @@
     <template id="product_list">
       <!--   <section class="produktliste"> -->
       <article>
-        <img
-          src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-          alt="Sahara Team India Fanwear"
-        />
+        <img src="" alt="" />
         <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
         <h5></h5>
         <h4 class="subtle"><!-- Tshirts | Nike --></h4>
@@ -71,5 +68,6 @@
         </article> -->
     <!--      </section> -->
     <script src="js/produktliste.js"></script>
+    <!--    <script src="js/produkt.js"></script> -->
   </body>
 </html>
