linket fra produktliste til produkt og tilføjet billeder

--- a/produktliste.html
+++ b/produktliste.html
@@ -28,7 +28,7 @@
         <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
         <h5></h5>
         <h4 class="subtle"><!-- Tshirts | Nike --></h4>
-        <p class="price">DKK 1595,-</p>
+        <p class="price">-</p>
         <a href="">Læs mere</a>
       </article>
     </template>
