last child til "læs mere"

--- a/produktliste.html
+++ b/produktliste.html
@@ -24,12 +24,16 @@
     <template id="product_list">
       <!--   <section class="produktliste"> -->
       <article>
-        <img src="" alt="" />
-        <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
-        <h5></h5>
-        <h4 class="subtle"><!-- Tshirts | Nike --></h4>
-        <p class="price">-</p>
-        <a href="">Læs mere</a>
+        <div>
+          <img src="" alt="" />
+          <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
+          <h5></h5>
+          <h4 class="subtle"><!-- Tshirts | Nike --></h4>
+          <p class="price">-</p>
+        </div>
+        <div>
+          <a href="">Læs mere</a>
+        </div>
       </article>
     </template>
     <!-- <article class="onSale">
