tilføjelser af informationer til produktsiden

--- a/produkt.html
+++ b/produkt.html
@@ -47,15 +47,14 @@
         <section class="info">
           <h2>Produkt information</h2>
           <dl>
-            <dt>Model navn</dt>
-            <dd>Brown Knitted Cardigan</dd>
-            <dt>Farve</dt>
-            <dd>Brun</dd>
+            <dt>Sæson</dt>
+            <dd class="season"></dd>
+            <dt>Type</dt>
+            <dd class="type"></dd>
             <dt>Produkt nummer</dt>
-            <dd>1163</dd>
+            <dd class="nummer"></dd>
           </dl>
-          <h2>Nike</h2>
-          <p>Nike, creating experiences for today's athletes</p>
+          <h2 class="brand"></h2>
         </section>
       </section>
     </main>
