--- a/produktliste.html
+++ b/produktliste.html
@@ -19,18 +19,23 @@
       </nav>
     </header>
     <main>
+      <ul id="categoryList"></ul>
       <h2>Produkter</h2>
     </main>
     <template id="product_list">
       <!--   <section class="produktliste"> -->
       <article>
-        <div>
-          <img src="" alt="" />
-          <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
-          <h5></h5>
-          <h4 class="subtle"><!-- Tshirts | Nike --></h4>
-          <p class="price">-</p>
+        <img src="" alt="" />
+        <h3><!-- Sahara Team India Fanwear Round Neck Jersey --></h3>
+        <h5></h5>
+        <h6></h6>
+        <h4 class="subtle"><!-- Tshirts | Nike --></h4>
+        <p class="price">DKK <span>2039</span></p>
+        <div class="discounted">
+          <p><span></span></p>
+          <p><span></span></p>
         </div>
+
         <div>
           <a href="">Læs mere</a>
         </div>
@@ -72,6 +77,7 @@
         </article> -->
     <!--      </section> -->
     <script src="js/produktliste.js"></script>
+    <script src="kategorier.js"></script>
     <!--    <script src="js/produkt.js"></script> -->
   </body>
 </html>
