--- a/kategori.html
+++ b/kategori.html
@@ -21,13 +21,18 @@
     <main>
       <h2>Kategorier</h2>
       <section class="kategoriliste">
-        <a href="produktliste.html">Accessories</a>
+        <template>
+          <li><a href="produktliste.html">Accessories</a></li>
+        </template>
+        <ul></ul>
+        <!--     <a href="produktliste.html">Accessories</a>
         <a href="produkt.html">Tøj</a>
         <a href="produktliste.html">Sko</a>
         <a href="produktliste.html">Tilbud</a>
         <a href="produktliste.html">Selvpleje</a>
-        <a href="produktliste.html">Sport</a>
+        <a href="produktliste.html">Sport</a> -->
       </section>
     </main>
+    <script src="kategorier.js"></script>
   </body>
 </html>
